Changes between 1.3.0 and 1.3.1
==================================================

- fix issue96: make capturing more resilient against Control-C 
  interruptions (involved somewhat substantial refactoring
  to the underlying capturing functionality to avoid race 
  conditions).

- fix issue95: late-import zlib so that it's not required 
  for general py.test startup. 

- fix issue91: introduce new py.test.xfail(reason) helper 
  to imperatively mark a test as expected to fail. Can 
  be used from within setup and test functions. This is
  useful especially for parametrized tests when certain 
  configurations are expected-to-fail.  In this case the
  declarative approach with the @py.test.mark.xfail cannot
  be used as it would mark all configurations as xfail. 

- fix issue94: make reporting more robust against bogus source code
  (and internally be more careful when presenting unexpected byte sequences)

- improve and refine letter reporting in the progress bar:
  .  pass
  f  failed test
  s  skipped tests (reminder: use for dependency/platform mismatch only)
  x  xfailed test (test that was expected to fail)
  X  xpassed test (test that was expected to fail but passed)

  You can use any combination of 'fsxX' with the '-r' extended
  reporting option. The xfail/xpass results will show up as 
  skipped tests in the junitxml output - which also fixes 
  issue99.

- make py.test.cmdline.main() return the exitstatus 
  instead of raising (which is still done by py.cmdline.pytest())
  and make it so that py.test.cmdline.main() can be called
  multiple times, at least as far as py.test's internal 
  state is concerned - previously it would raise an exception
  on the second time. 

- improve tracebacks presentation: 
  - raises shows shorter more relevant tracebacks

- improve support for raises and other dynamically compiled code by
  manipulating python's linecache.cache instead of the previous
  rather hacky way of creating custom code objects.  This makes 